@@ -10,6 +10,7 @@ linux (4.19~rc6-1~exp1) UNRELEASED; urgency=medium
     instead of editing path
   * debian/bin, debian/lib/python: Clean up imports based on pyflakes report
   * debian/bin, debian/lib/python: Delete write-only vars reported by pyflakes
+  * debian/lib/python/debian_linux/gencontrol.py: Delete broken methods
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 20 Sep 2018 02:40:54 +0100
 
